# repman

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
libs/TXLib/: CMakeLists.txt
libs/TXLib/TXCMakeUtils/: cp_dir_to_bin.cmake  optimization.cmake
libs/TXLib/TXData/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/TXLib/TXData/include/impl/: parted_arr.h
libs/TXLib/TXData/include/tx/: data.h
libs/TXLib/TXData/src/: parted_arr.cpp
libs/TXLib/TXGraphics/: CMakeLists.txt  Makefile  Readme.txt  cmake_install.cmake
libs/TXLib/TXGraphics/dependency/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/TXLib/TXGraphics/dependency/glad/include/glad/: glad.h
libs/TXLib/TXGraphics/dependency/glad/src/: glad.c
libs/TXLib/TXGraphics/include/impl/: framework.h  render_engine.h  rgb.h
libs/TXLib/TXGraphics/include/tx/: graphics.h
libs/TXLib/TXGraphics/src/: render_engine.cpp
libs/TXLib/TXGrid/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/TXLib/TXGrid/include/impl/: coord_map.h  grid_system.h  grid_utils.h
libs/TXLib/TXGrid/include/tx/: grid.h
libs/TXLib/TXGrid/src/: coord_map.cpp  grid_system.cpp  grid_utils.cpp
libs/TXLib/TXJson/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/TXLib/TXJson/include/impl/: json_parser.h
libs/TXLib/TXJson/include/tx/: json.h
libs/TXLib/TXJson/src/: escape_parser.hpp  json_parser.cpp
libs/TXLib/TXMap/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/TXLib/TXMap/include/impl/: kvmap.h  set_view.h
libs/TXLib/TXMap/include/tx/: map.h
libs/TXLib/TXMath/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/TXLib/TXMath/include/impl/: basic_utils.h  geom_util_classes.h  geom_utils.h  geometry.h  math_line.h
libs/TXLib/TXMath/include/tx/: math.h
libs/TXLib/TXPixels/: CMakeLists.txt
libs/TXLib/TXResource/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/TXLib/TXResource/include/impl/: detail.h
libs/TXLib/TXResource/include/tx/: resource.h
libs/TXLib/TXResource/src/: detail.cpp
libs/TXLib/TXStdHeader/: header.h
src/: Project.hpp  main.cpp
