# Copyright@TXLib All rights reserved.
# Author: TX Studio: TX_Jerry

cmake_minimum_required(VERSION 4.2)

# Modules
add_subdirectory("TXMath")
add_subdirectory("TXMap")
add_subdirectory("TXJson")
add_subdirectory("TXGrid")
add_subdirectory("TXResource")
add_subdirectory("TXData")
add_subdirectory("TXGraphics")